tests/bad/test_radius.marc
MAP:    test_bad_map.fits
        BODY:   Jupiter
        EQ_RAD:         -71492
        POL_RAD:        66854
        ROTATION:       PROGRADE
        DATA_TYPE:      BYTE
        TYPE:           SIMPLE_C
        OPTIONS:
                CENTRIC
        SAMPLES:        50
        LINES:          25

        PLANE:
                LONGITUDE
